<resources>
    <string name="app_name">PaymentApp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">User name is required</string>
    <string name="invalid_password">Password is invalid</string>
    <string name="invalid_first_name">First name is required</string>
    <string name="invalid_last_name">Last name is required</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_in">Sign in</string>
    <string name="use_your">Use your</string>
    <string name="passport">Passport</string>
    <string name="account">account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">I forgot password</string>
    <string name="login">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="create_a_personal_account">Create a personal account</string>
    <string name="to_use">to use</string>
    <string name="create_password">Create password</string>
    <string name="password_constrain">Password must be at least 8 characters.\nMust include: (1 uppercase, 1 digit, 1 lowercase)</string>
    <string name="legal_first_name">Legal First Name</string>
    <string name="legal_last_name">Legal Last Name</string>
    <string name="user_agreement_and_policy">I have read and agree to Passport.io User Agreement and Privacy Policy.\nI allow %s to use my Passport.io data</string>
    <string name="user_agreement">User Agreement</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="title_wallet">Wallet</string>
    <string name="title_scan">Scan</string>
    <string name="title_profile">Profile</string>
    <string name="warcraft_game">Warcraft game</string>
    <string name="pair_to_business">Pair to %s</string>
    <string name="under_risk_review">Under Risk Review</string>
    <string name="available_balance">Available balance</string>
    <string name="dollar_unit">$</string>
    <string name="top_up">Top up</string>
    <string name="vault">Vault</string>
    <string name="place_qr_code_in_frame_to_scan_it">Place <b>QR</b> code in frame to scan it</string>
    <string name="payment">Payment</string>
    <string name="transaction_success">Transaction success</string>
    <string name="transaction_code">Transaction code:\n%s</string>
    <string name="send_order_info_to_user">We are sending a copy of all important order information to your email address.</string>
    <string name="ok">ok</string>
    <string name="steam">Steam</string>
    <string name="total_amount">Total amout</string>
    <string name="default_payment_method">Default payment method</string>
    <string name="fasterpay_balance">FasterPay balance:</string>
    <string name="pay_money">Pay %s%s</string>
    <string name="birthday">Birthday</string>
    <string name="invalid_birthday">Birthday is required</string>
    <string name="log_out">Log out</string>
    <string name="delete_account">Delete account</string>
    <string name="currency_value">%s %s</string>
    <string name="failed_pay">Payment failed. The amount is bigger your balance or an error occured. Please try again.</string>
    <string name="generate_a_qr_code">Generate a QR code</string>
    <string name="product_name">Product name</string>
    <string name="item_name">Item name</string>
    <string name="business_name">Business name</string>
    <string name="currency_unit">Currency unit</string>
    <string name="qr_code">QR code</string>
    <string name="existed_email_error">Email existed. Please use another.</string>
</resources>
