<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dialog.PaySuccessFragment"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal"
    tools:ignore="MissingPrefix">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_transaction_success_effect">

        <ImageView
            android:layout_width="108dp"
            android:layout_height="108dp"
            android:background="@drawable/bg_circle"
            android:backgroundTint="#979797"
            android:layout_gravity="center"
            android:src="@drawable/ic_checked"
            android:scaleType="centerInside"/>
    </FrameLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/transaction_success"
        android:layout_gravity="center_horizontal"
        android:textSize="18sp"
        fontPath="fonts/Proxima-Nova-Bold.ttf"
        android:textAllCaps="true"
        android:layout_marginTop="19dp"
        android:layout_marginBottom="19dp"/>

    <TextView
        android:id="@+id/transaction_code_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/transaction_code"
        android:layout_gravity="center_horizontal"
        android:textSize="18sp"
        fontPath="fonts/Proxima-Nova-Medium.ttf"
        android:textAlignment="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_order_info_to_user"
        android:layout_gravity="center_horizontal"
        android:textSize="14sp"
        fontPath="fonts/Proxima-Nova-Medium.ttf"
        android:textAlignment="center"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider_back_ground_color"
        android:layout_marginTop="25dp"/>


    <Button
        android:id="@+id/ok_btn"
        android:layout_marginTop="18dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:layout_gravity="center_horizontal"
        style="@style/Widget.AppCompat.Button.Borderless"/>
</LinearLayout>