<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingPrefix"
    android:background="@drawable/bg_window">

    <LinearLayout
        android:id="@+id/layout_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="@dimen/layout_container_padding_start"
        android:paddingEnd="@dimen/layout_container_padding_end">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="29dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/qr_code"
                    fontPath="fonts/Proxima-Nova-Light.ttf"
                    android:textSize="24sp"
                    android:lineSpacingExtra="2.5dp"
                    android:textColor="@color/white"
                    android:layout_marginTop="19dp"/>

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@mipmap/ic_launcher"
                    android:layout_margin="24dp"/>

                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress|textNoSuggestions"
                    android:id="@+id/item_et"
                    android:lines="1"
                    android:maxLines="1"
                    android:hint="@string/item_name"
                    android:background="@drawable/bg_input_view"
                    android:layout_marginTop="20dp"
                    android:textColorHint="@color/white"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:textColor="@color/white"
                    fontPath="fonts/Proxima-Nova-Medium.otf"/>

                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:id="@+id/business_et"
                    android:lines="1"
                    android:maxLines="1"
                    android:hint="@string/business_name"
                    android:background="@drawable/bg_input_view"
                    android:layout_marginTop="25dp"
                    android:textColorHint="@color/white"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:textColor="@color/white"/>

                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textNoSuggestions"
                    android:id="@+id/first_name_et"
                    android:lines="1"
                    android:maxLines="1"
                    android:hint="@string/total_amount"
                    android:background="@drawable/bg_input_view"
                    android:layout_marginTop="14dp"
                    android:textColorHint="@color/white"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:textColor="@color/white"
                    fontPath="fonts/Proxima-Nova-Medium.otf" />



                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:id="@+id/currency_unit_et"
                    android:lines="1"
                    android:maxLines="1"
                    android:hint="@string/currency_unit"
                    android:background="@drawable/bg_input_view"
                    android:layout_marginTop="25dp"
                    android:textColorHint="@color/white"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:textColor="@color/white"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/sign_up_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_button"
                    android:text="@string/generate_a_qr_code"
                    android:textAllCaps="false"
                    android:layout_marginTop="18dp"
                    fontPath="fonts/Proxima-Nova-Medium.otf" />

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/progress_bar_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/progress_bar_background"
        android:visibility="gone"
        android:fitsSystemWindows="true"
        android:clickable="true">

        <ProgressBar
            android:id="@+id/progress_bar_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>
    </FrameLayout>
</FrameLayout>
